--- a/views/customer/ukuranJas.ejs
+++ b/views/customer/ukuranJas.ejs
@@ -1,32 +1,19 @@
-<%- include('../includes/head.ejs') %>
-<!-- tambah css (Option) -->
+<%- include('../includes/head.ejs') %> 
+
 </head>
 <body>
-<%- include('../includes/nav.ejs') %>
-<div class="col-md-10 mb-5 p-5 pt-2">
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="wrapper">
+    <%- include('../includes/nav.ejs') %>
+    <div class="main_content">
+        <div class="header">Ukuran Jas <%= produk.namaCustomer %>  <i class="bi bi-clipboard-data text-center"></i></div>
 
-    <h1 class="h1">Ukuran <%= produk.namaCustomer %>  <i class="bi bi-clipboard-data text-center"></i></h1>
-    
-    <hr class="bg-secondary">
-    <br>
-    <br>
-    <br>
-    <div class="row text-center justify-content-center">
-        <h1>Jas</h1>
-
+        <div class="info">
+            <br>
+            <form action="/customer/ukuranJas" method="post">
+            </form>
+        </div>
+        <div class="col-1"></div>
+            </div>
     </div>
-    
-
-</div>
-<!-- ! penutupup div yang bawah jangan diganti atau di hapus punya row nav -->
-</div> 
-
-
-<%- include('../includes/navFixed.ejs') %>
-
-
+    </div>
 <%- include('../includes/end.ejs') %>
