selesai bikin fitur search

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -125,3 +125,15 @@ td {
 .lead {
   text-transform: capitalize;
 }
+
+.btn-sms {
+  margin-bottom: 60px;
+}
+
+.judulTambah {
+  text-transform: uppercase;
+}
+
+.autokanan {
+  margin-left: 50px;
+}
