--- a/views/admin/karyawan.ejs
+++ b/views/admin/karyawan.ejs
@@ -45,7 +45,7 @@
                             <td><%= el.noTelp %></td>
                             <td> <%= el.alamat %> </td>
                             <td> <%= el.jabatan %></td>
-                            <td><button type="button" class="btn btn-warning btn-sm text-center"><i class="bi bi-pencil-square"></i></button></td>
+                            <td><a href="/edit-karyawan/<%= el._id %>?editDataKaryawan=edit-data-karyawan" class="btn btn-warning btn-sm text-center"><i class="bi bi-pencil-square"></i></a></td>
                             <td><a class="btn btn-danger btn-sm text-center" href="/hapus-karyawan/<%= el._id %>?hapus=hapus-data"><i class="bi bi-trash"></i></a></td>
                         </tr>
                         <% }) %>
