--- a/views/customer/ukuranBaju.ejs
+++ b/views/customer/ukuranBaju.ejs
@@ -12,8 +12,9 @@
             <form action="/customer/ukuranBaju" method="post">
                 <div class="row justify-content-center ukuranRow">
                     <div class="col-10">
-                    <p class="leads"><%= path %> </p>
+                        <%- include('../includes/navFixed.ejs') %> 
                     <div class="row baju-row">
+                        
                         <div class="col-1">
                             <p class="lead">1</p>
                     </div>
