--- a/views/customer/pelanggan.ejs
+++ b/views/customer/pelanggan.ejs
@@ -18,13 +18,20 @@
         <div class="info">
         <div class="row">
             <% if (!hapus) { %>
-                <div class="col-8">
+                <div class="col-5">
                     <br><br>
                     <p class="lead">Halaman untuk mengatur data pelanggan</p>
                 </div>
+                <div class="col-3">
+                    <br><br>
+                        <form action="/customer/cari-data" class="d-flex" method="post">
+                            <input class="form-control me-2" type="search" placeholder="Cari Data" aria-label="Search" name="cariData">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                </div>
                     <div class="col-4">
-                        <br><br>
-                        <a class="btn btn-secondary   " href="/customer/tambah-data" role="button">Tambah</a>
+                        <br><br> 
+                        <a class="btn btn-secondary autokanan" href="/customer/tambah-data" role="button">Tambah</a>
                     </div>
             <% } %>
             <br>
