--- a/views/admin/dasboard.ejs
+++ b/views/admin/dasboard.ejs
@@ -5,7 +5,10 @@
         <div class="wrapper">
         <%- include('../includes/nav.ejs') %>
         <div class="main_content">
-            <div class="header"><i class="bi bi-graph-up"></i> Dashboard</div>
+            <% if (login) { %>
+                <div class="header"><i class="bi bi-graph-up"></i> Dashboard</div>
+            <% } %>
+
             <div class="info">
             <div class="row text-white justify-content-center">
                 <div class="col-5">
