--- a/views/customer/cari-data.ejs
+++ b/views/customer/cari-data.ejs
@@ -11,10 +11,11 @@
         <div class="row">
             <br>
             <br>
-            <div class="col-3">
+            <div class="col-5">
                 <br><br>
                     <form action="/customer/cari-data" class="d-flex" method="post">
                         <input class="form-control me-2" type="search" placeholder="Cari Data" aria-label="Search" name="cariData">
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
             </div>
