--- a/views/customer/pelanggan.ejs
+++ b/views/customer/pelanggan.ejs
@@ -26,6 +26,7 @@
                     <br><br>
                         <form action="/customer/cari-data" class="d-flex" method="post">
                             <input class="form-control me-2" type="search" placeholder="Cari Data" aria-label="Search" name="cariData">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
                 </div>
@@ -79,6 +80,7 @@
                             <% if (hapus) { %>
                                 <form action="<% if (staff) { %>/hapus-data-karyawan
                                     <% } else {%>/customer/hapus-data-fix<%} %>" method="POST">
+                                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                     <input type="hidden" name="id" value="<%= el._id %> ">
                                     <td><button type="submit" class="btn btn-danger btn-md text-center  btn-sm">Hapus Data</button></td>
                                 </form>
