--- a/views/customer/tambahData.ejs
+++ b/views/customer/tambahData.ejs
@@ -23,6 +23,12 @@
                             No telp sudah terdaftar, Masukan No Lain
                         </div>
                     <% } %>
+
+                    <% if (errors) { %>
+                        <div class="alert alert-danger" role="alert">
+                            <%= errors %>
+                        </div>
+                    <% } %>
             <br>
                     <div class="col-12">
                         <p class="judulTambah"> <% if (editing) { %>EDIT DATA PELANGGAN <%= dataP.namaCustomer %> <% }  else if (editStaff) {%>  edit Data Karyawan  <%= data.namaCustomer %> 
@@ -40,7 +46,7 @@
                         name="namaCustomer"
                         placeholder="Masukan Nama"
                         id="namaCustomers"
-                        value="<% if (editing) { %><%= dataP.namaCustomer %> <% } else if (editStaff) {%> <%= data.namaCustomer %> <%} %>"
+                        value="<% if (editing) { %><%= dataP.namaCustomer %> <% } else if (editStaff) {%> <%= data.namaCustomer %> <%} else if (data) {%><%= data.namaCustomer %><%} %>"
                         required 
                         /> 
                         <br>
@@ -51,7 +57,7 @@
                         placeholder="Telp-Hp"
                         id="noHps"
                         min="0"
-                        value="<% if (editing) { %><%= dataP.noTelp %> <% } else if (editStaff) {%> <%= data.noTelp %> <%} %>"
+                        value="<% if (editing) { %><%= dataP.noTelp %> <% } else if (editStaff) {%> <%= data.noTelp %> <%}  else if (data) {%><%= data.noHP %><%} %>"
                         required 
                         />
                         <br>
@@ -62,7 +68,7 @@
                         name="alamatCustomer"
                         placeholder="Alamat"
                         id="alamats"
-                        value="<% if (editing) { %><%= dataP.alamat %> <% } else if (editStaff) {%> <%= data.alamat %> <%}  %>"
+                        value="<% if (editing) { %><%= dataP.alamat %> <% } else if (editStaff) {%> <%= data.alamat %> <%} else if (data) {%><%= data.alamatCustomer %><%}  %>"
                         />
     <br>
                         <% if (staff) { %>
@@ -82,6 +88,14 @@
                             <input type="hidden" value="<%= data._id %>" name="idK">
                         <% } %>
                             <br><br>
+
+                            <% if (editing) { %>
+                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <% } else if (editStaff) {%> 
+                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <%} else if (staff) {%> 
+                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <%} else  {%>  <input type="hidden" name="_csrf" value="<%= csrfToken %>"> <%} %>
                             
                         <button class="btn btn-success" type="submit"><% if (editing) { %>
                             Edit Data
