--- a/views/customer/templateUkuran.ejs
+++ b/views/customer/templateUkuran.ejs
@@ -32,6 +32,7 @@
                                             <option value="jas">Jas</option>
                                         </select>
                                     </td>
+                                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                     <td><button class="btn btn-primary" type="submit">Submit</button></td>
                                 </form>
                             </tr>
