--- a/views/customer/ukuranBaju.ejs
+++ b/views/customer/ukuranBaju.ejs
@@ -205,6 +205,7 @@
 
                 <div class="col-1 m-auto">
                     <br>
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <button class="btn btn-success" type="submit">Submit</button>
                 </div>
             
