--- a/views/customer/ukuranCelana.ejs
+++ b/views/customer/ukuranCelana.ejs
@@ -89,6 +89,7 @@
 
                             <div class="col-1 m-auto">
                                 <br>
+                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                 <button class="btn btn-success" type="submit">Submit</button>
                             </div>
 
